utils + add precompute pks

--- a/Examples/Notebooks/run_CoLoRe_and_corrfunc.ipynb
+++ b/Examples/Notebooks/run_CoLoRe_and_corrfunc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "553ba3fa-2265-49e5-9f4e-e0c8af95b20e",
    "metadata": {
     "tags": []
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "acecbddc-4264-439f-8d32-2143b046760b",
    "metadata": {
     "tags": []
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "02e896f9-f56b-417e-8776-81988c62ab5d",
    "metadata": {
     "tags": []
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "8708797e-7a6c-4a8d-a734-2e8357311bb0",
    "metadata": {
     "tags": []
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cb5af5b7-46eb-4d90-8b68-62dc2707cb7c",
    "metadata": {
     "tags": []
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "e4bdc165-b8e3-42fa-9403-30bcff6b380a",
    "metadata": {
     "tags": []
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "291a4886-ba14-43cb-9452-b575f077a6d2",
    "metadata": {
     "tags": []
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "a8185e6e-55c3-4d99-9617-1070f097fd69",
    "metadata": {
     "tags": []
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "0f5ab56b-3ee7-49a4-8f3b-9355ddf25e7d",
    "metadata": {
     "tags": []
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "0eb2aca8-18e8-403a-a5df-1f5385ef5443",
    "metadata": {
     "tags": []
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "7f7816a7-9e5e-406a-88bd-5675299b6a5d",
    "metadata": {
     "tags": []
@@ -415,11 +415,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CorrfCorrfCorrfCorrf    2130\n",
+      "CorrfCorrfCorrfCorrfCorrf    0 123\n",
+      "4\n",
       "\n",
       "\n",
       "\n",
-      "Corrf 4\n",
       "None\n",
       "None\n",
       "None\n",
@@ -447,6 +447,60 @@
     "        args=(seed,)\n",
     "    ) for seed in range(5)]:\n",
     "        print(result.get()) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9b145f6-43b3-4bd3-9cb6-c012d2a13cec",
+   "metadata": {},
+   "source": [
+    "## Precompute PK measurements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fa3c1d5-064a-448b-8f2d-f7e93b79e5e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from CoLoRe_corrf_analysis.pk_helper import PKComputations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c692a45c-f7e1-4ab9-a204-3356dcd50378",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_multipoles(poles, seed, source):\n",
+    "    colore_box = get_colore_box_name(seed) / \"results\"\n",
+    "    \n",
+    "    for rsd in True, False:\n",
+    "        x = PKComputations(colore_box, source, colore_box.parent / \"param.cfg\", rsd=rsd)\n",
+    "        for pole in poles:\n",
+    "            _ = x.compute_npole(pole)\n",
+    "        \n",
+    "    return str(colore_box)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3b202bb-8a96-4a73-9772-45fb258f9e45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nproc_pk = 10\n",
+    "poles = [0,2]\n",
+    "source = 1\n",
+    "with Pool(nproc_pk) as pool:\n",
+    "    for result in [pool.apply_async(\n",
+    "        compute_multipoles,\n",
+    "        args=(poles, seed, source)\n",
+    "    ) for seed in range(10)]:\n",
+    "        print(result.get())"
    ]
   }
  ],
